# calendar-agent

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml
deploy/: configure-hermes-calendar.sh  setup.sh
docs/plans/: 2026-04-30-calendar-permissions.md
hermes-home/: .env.example  SOUL.md  config.calendar.fragment.yaml
scripts/: deliver_notifications.py  init-radicale-users.sh  smoke.sh
services/calendar-service/: Dockerfile  pyproject.toml
services/calendar-service/app/: agent.py  audit.py  calendar_logic.py  cli.py  config.py  database.py  employees.py  freebusy.py  main.py  mcp_server.py  models.py  policy.py  radicale_client.py  reminders.py  schemas.py  security.py
services/calendar-service/tests/: test_calendar_permissions.py  test_clean_architecture.py  test_config.py  test_database_migrations.py  test_employees.py  test_radicale_client.py  test_security.py
services/hermes/: Dockerfile
services/radicale/: config  rights
